Created tests for the upcoming, complicated OngoingMatching-method